--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "start": "node ."
   },
+  "keywords": [
+    "Mongo",
+    "Mongodb",
+    "Database"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/WilyFoxM/basic-mongo.git"
